--- a/css/desktop.css
+++ b/css/desktop.css
@@ -5,6 +5,9 @@
 
 
     /* DISPLAY NONE */
+    header{background: rgb(255,255,255);
+        background: linear-gradient(118deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30%, rgba(251,250,249,1) 40%, rgba(251,250,249,1) 56%, rgba(241,229,217,1) 66%, rgba(252,176,69,1) 95%, rgba(252,142,69,1) 100%);
+    }
     .hambur {
         display: none;
     }
@@ -27,6 +30,11 @@
     footer {
         display: flex;
         justify-content: space-evenly;
+        
+            padding: 0px 0px 15px;
+            background: var(--footer);
+            height: 24rem;
+        
     }
 
 
@@ -76,6 +84,17 @@
         padding: 1.25rem;
         margin: 20px 50px 0px 50px;
         text-align: left;
+    font-size: 4rem;
+
+    }
+    .dowloadNotas {
+        padding: .7rem 0rem;
+        display: inline-block;
+        width: 18rem;
+        font-size: medium;
+        position: relative;
+        /* left: 1rem; */
+        top: 3rem;
     }
 
     .box h4 {
@@ -90,6 +109,22 @@
         display: flex;
         flex-direction: row-reverse;
         justify-content: space-around;
+    }
+    .name {
+        margin: 1.31rem;
+        font-size: 1rem;
+    }
+    
+    .parrafo2 {
+        margin: 1.31rem;
+    }
+    .title2 {
+        font-size: 2.451rem;
+        margin: 3.75rem;
+    }
+    .sub-title3 {
+        color: #FFFFFF;
+        font-size: 40px;
     }
 
     .parrafoo {
