--- a/css/animation.css
+++ b/css/animation.css
@@ -1,159 +1,165 @@
- .order-Grid{
-    display: flex;
-    align-items: center;
+ .order-Grid {
+   display: flex;
+   align-items: center;
  }
- .grid-container h3{
-  color: #fff;
+
+ .grid-container h3 {
+   color: #fff;
  }
+
  .grid-container {
-    display: grid;
-    grid-template-rows: 3rem;
-    grid-template-columns: 18rem 18rem 20rem;
-    grid-gap: 6px;
-  }
-  
-  .grid-item1 {
-    background: rgb(102, 102, 150);
-    text-align: center;
-    align-self: center;    
-    border: rgb(255, 255, 255) 2px solid;
-    padding: 0.4rem;
-    border-radius: 5px;
-    box-shadow: -7px 6px 22px -8px rgba(0,0,0,0.5);    
-  }
-  
-  .grid-item {
-    background: rgb(215, 210, 210);
-    text-align: center;
-    align-self: center;    
-    border: rgb(255, 255, 255) 1px solid;
-    padding: 0.4rem;
-    border-radius: 5px;
-    box-shadow: -7px 6px 22px -8px rgba(0,0,0,0.5);
-  }
-  .rowone{
-    background: rgb(244, 240, 240);
+   display: grid;
+   grid-template-rows: 3rem;
+   grid-template-columns: 18rem 18rem 20rem;
+   grid-gap: 6px;
+ }
 
-  }
+ .grid-item1 {
+   background: rgb(102, 102, 150);
+   text-align: center;
+   align-self: center;
+   border: rgb(255, 255, 255) 2px solid;
+   padding: 0.4rem;
+   border-radius: 5px;
+   box-shadow: -7px 6px 22px -8px rgba(0, 0, 0, 0.5);
+ }
 
-  .grid-container2 {
-    display: grid;
-    grid-template-rows: 2.5rem 2.5rem;
-    grid-template-columns: 2.5rem 20rem;
-    grid-gap: 4px;
-  }
-  
-  .grid-item2 {
-    background: rgb(244, 240, 240);
-    text-align: center;
-    align-self: center;    
-    border: rgb(253, 253, 253) 2px solid;
-    padding: 0.4rem;
-    border-radius: 5px;
-    box-shadow: -7px 6px 22px -8px rgba(0,0,0,0.5);
-    
-  }
-  
-  .grid-item3 {
-    background: rgb(244, 240, 240);
-    text-align: left;
-    align-self: center;    
-    border: rgb(255, 255, 255) 1px solid;
-    padding: 0.4rem;
-    border-radius: 5px;
-    box-shadow: -7px 6px 22px -8px rgba(0,0,0,0.5);
-  }
-  .grid-ubi{
-    display: flex;
-    align-items: center;
-  }
+ .grid-item {
+   background: rgb(215, 210, 210);
+   text-align: center;
+   align-self: center;
+   border: rgb(255, 255, 255) 1px solid;
+   padding: 0.4rem;
+   border-radius: 5px;
+   box-shadow: -7px 6px 22px -8px rgba(0, 0, 0, 0.5);
+ }
 
+ .rowone {
+   background: rgb(244, 240, 240);
+ }
 
+ .grid-container2 {
+   display: grid;
+   grid-template-rows: 2.5rem 2.5rem;
+   grid-template-columns: 2.5rem 20rem;
+   grid-gap: 4px;
+ }
+
+ .grid-item2 {
+   background: rgb(244, 240, 240);
+   text-align: center;
+   align-self: center;
+   border: rgb(253, 253, 253) 2px solid;
+   padding: 0.4rem;
+   border-radius: 5px;
+   box-shadow: -7px 6px 22px -8px rgba(0, 0, 0, 0.5);
+ }
+
+ .grid-item3 {
+   background: rgb(244, 240, 240);
+   text-align: left;
+   align-self: center;
+   border: rgb(255, 255, 255) 1px solid;
+   padding: 0.4rem;
+   border-radius: 5px;
+   box-shadow: -7px 6px 22px -8px rgba(0, 0, 0, 0.5);
+ }
+
+ .grid-ubi {
+   display: flex;
+   align-items: center;
+ }
 
 
 
 
-/* CARROUSEL */
-.slide-contenedor{
-    max-width:100%;
-    max-height: 615px;
-    width: 100%;
-    height:auto;
-    position: relative;
-    overflow: hidden;
-    background-color: black;
-    /* margin: auto; */
-}
 
-/* .miSlider{
+
+ /* CARROUSEL */
+ .slide-contenedor {
+   max-width: 100%;
+   max-height: 615px;
+   width: 100%;
+   height: auto;
+   position: relative;
+   overflow: hidden;
+   background-color: black;
+   /* margin: auto; */
+ }
+
+ /* .miSlider{
     display: none;
     transition: 2s;
     max-height: 100vh;
 } */
 
-.miSlider img{
-    width: 100%;
-    max-height: 100vh;
-    height: inherit;
-    object-fit: cover;
-    vertical-align: top;
-    transition: 2s;
-}
+ .miSlider img {
+   width: 100%;
+   max-height: 100vh;
+   height: inherit;
+   object-fit: cover;
+   vertical-align: top;
+   transition: 2s;
+ }
 
-.direcciones{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 20px;
-}
+ .direcciones {
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   top: 0;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   font-size: 20px;
+ }
 
-.direcciones a{
-    color: #fff;
-    display: inline-block;
-    padding: 20px;
-    text-decoration: none;
-}
+ .direcciones a {
+   color: #fff;
+   display: inline-block;
+   padding: 20px;
+   text-decoration: none;
+ }
 
-.direcciones a:hover{
-    background: rgba(0, 0, 0, .5);
-    transition: .5s;
-}
+ .direcciones a:hover {
+   background: rgba(0, 0, 0, .5);
+   transition: .5s;
+ }
 
-.barras{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-bottom:15px;
-}
+ .barras {
+   position: absolute;
+   bottom: 0;
+   width: 100%;
+   display: flex;
+   justify-content: center;
+   margin-bottom: 15px;
+ }
 
-.barra{
-    cursor: pointer;
-    height:2px;
-    width: 25px;
-    margin: 0 2px;
-    background: #dcdde1;
-    display: inline-block;
-    margin-left: 3px;
-}
+ .barra {
+   cursor: pointer;
+   height: 2px;
+   width: 25px;
+   margin: 0 2px;
+   background: #dcdde1;
+   display: inline-block;
+   margin-left: 3px;
+ }
 
-.active{
-    background-color: #e74c3c;
-}
+ .active {
+   background-color: #e74c3c;
+ }
 
-.fade{
-    animation-name: fade;
-    animation-duration: 4s;    
-}
+ .fade {
+   animation-name: fade;
+   animation-duration: 4s;
+ }
 
 
-@keyframes fade {
-    from {opacity: .7;}
-    to{opacity:1;}
-}
+ @keyframes fade {
+   from {
+     opacity: .7;
+   }
 
+   to {
+     opacity: 1;
+   }
+ }
