--- a/css/mobile.css
+++ b/css/mobile.css
@@ -237,6 +237,15 @@
         width: 60vw;
     }
 
-    
+    .grid-container {
+        grid-template-columns: 100%;
+        grid-template-rows: auto;
+      }
+      .grid-item1 {
+        text-align: left;
+      }
+      .grid-item {
+        text-align: left;
+      }
 
 }
