--- a/css/mobile.css
+++ b/css/mobile.css
@@ -236,16 +236,22 @@
     .logo-f img {
         width: 60vw;
     }
-
-    .grid-container {
-        grid-template-columns: 100%;
-        grid-template-rows: auto;
+    
+    .grid-container h3 {        
+        font-size: medium;
       }
-      .grid-item1 {
-        text-align: left;
+      .grid-container h4 {        
+        font-size: small;
       }
-      .grid-item {
-        text-align: left;
+      .mobile-grid{
+        display: none;
       }
-
+      .grid-container {
+        display: grid;
+        grid-template-rows: 3rem;
+        grid-template-columns: 14rem 13rem ;
+        grid-gap: 6px;
+      }
+     
+      
 }
