--- a/css/animation.css
+++ b/css/animation.css
@@ -85,14 +85,7 @@
     max-height: 100vh;
 } */
 
- .miSlider img {
-   width: 100%;
-   max-height: 100vh;
-   height: inherit;
-   object-fit: cover;
-   vertical-align: top;
-   transition: 2s;
- }
+ 
 
  .direcciones {
    width: 100%;
@@ -106,7 +99,7 @@
  }
 
  .direcciones a {
-   color: #fff;
+   color: rgb(54, 53, 53);
    display: inline-block;
    padding: 20px;
    text-decoration: none;
@@ -142,7 +135,7 @@
 
  .fade {
    animation-name: fade;
-   animation-duration: 4s;
+   animation-duration: 5s;
  }
 
 
