--- a/css/form.css
+++ b/css/form.css
@@ -23,7 +23,7 @@ textarea {
 }
 
 
-.form-name {
+/* .form-name {
     position: relative;
     width: 35%;
 }
@@ -38,12 +38,12 @@ textarea {
     position: relative;
 
     width: 100%;
-}
+} */
 
 ::placeholder {
     opacity: 0.7;
     color: var(--gray-2);
-    font-family: 'Kalam', cursive;
+    /* font-family: 'Kalam', cursive; */
     font-size: 1rem;
 }
 
@@ -52,7 +52,7 @@ button {
     background-color: var(--botton-nav);
     box-shadow: 2px 2px 5px var(--text02);
     color: var(--text02);
-    font-family: 'Schoolbell', cursive;
+    /* font-family: 'Schoolbell', cursive; */
     font-size: 1rem;
     border-radius: 0.6rem;
     padding: 0.2rem 0.5rem;
@@ -85,16 +85,17 @@ button:hover {
 .form-send {
     display: flex;
     justify-content: right;
-    padding: .5rem .5rem;
+    padding: .5rem .5rem .5rem 0rem;
 }
 .form-send button{
-    background-color: #e16e22;
+    background-color: #F3603B;
     padding: .3rem .8rem;
-}
-.form-send button:hover{
-    background-color: #c94808;
-    box-shadow: 0px 4px 8px rgba(12, 12, 12, 0.5);
+    box-shadow: 3px 4px 6px -1px rgba(0,0,0,1);
 
+}
+.form-send button:hover{    
+    box-shadow: inset 2px 5px 6px -1px rgb(70, 16, 7);
+    
 }
 
 div.errores {
@@ -133,8 +134,8 @@ div.errores {
 
 .errores-push {
     position: relative;
-    bottom: 0.3rem;
-    font-family: 'Kalam', cursive;
+    /* bottom: 0.3rem; */
+    /* font-family: 'Kalam', cursive; */
     font-size: 0.6em;
     color: var(--paragraph);
     padding: 0rem 0.6rem;
@@ -143,6 +144,6 @@ div.errores {
 
 .errores i{
     margin: 0.3rem 0rem;
-    background-color: var(--background);
+    background-color: rgb(27, 25, 37);
     border-radius: 0.4rem;
 }
