--- a/css/form.css
+++ b/css/form.css
@@ -1,4 +1,3 @@
-/* FORMULARIOOOOO */
 .form-start {
     padding: 0.25rem 0rem 0rem;
     display: flex;
@@ -22,24 +21,6 @@ textarea {
     padding: 0.3rem;
 }
 
-
-/* .form-name {
-    position: relative;
-    width: 35%;
-}
-
-.form-email {
-    position: relative;
-    width: 65%;
-    margin-left: 0.2rem;
-}
-
-.form-message {
-    position: relative;
-
-    width: 100%;
-} */
-
 ::placeholder {
     opacity: 0.7;
     color: var(--gray-2);
@@ -57,10 +38,11 @@ button {
     border-radius: 0.6rem;
     padding: 0.2rem 0.5rem;
 }
+
 .flag {
     position: relative;
     bottom: 1px;
-    padding: 0px 12px;    
+    padding: 0px 12px;
     background-color: #0e0d0d;
     border-color: var(--text02);
 }
@@ -76,27 +58,24 @@ button:hover {
     cursor: pointer;
 }
 
-
-
 .form-send {
     display: flex;
     justify-content: right;
     padding: .5rem .5rem .5rem 0rem;
 }
-.form-send button{
+
+.form-send button {
     background-color: #F3603B;
     padding: .3rem .8rem;
-    box-shadow: 3px 4px 6px -1px rgba(0,0,0,1);
-
+    box-shadow: 3px 4px 6px -1px rgba(0, 0, 0, 1);
 }
-.form-send button:hover{    
+
+.form-send button:hover {
     box-shadow: inset 2px 5px 6px -1px rgb(70, 16, 7);
-    
 }
 
 div.errores {
     padding: 0rem 1rem;
-    
 }
 
 #errorPush {
@@ -108,6 +87,7 @@ div.errores {
     font-size: 22px;
     color: red;
 }
+
 #errorPush2 {
     display: flex;
     align-items: center;
@@ -118,27 +98,15 @@ div.errores {
     color: rgb(6, 148, 6);
 }
 
-/* .material-icons {
-    display: flex;
-    align-items: center;
-    position: relative;
-    right: 1rem;
-    padding: 0.9rem;
-    font-size: 16px;
-    color: green;
-} */
-
 .errores-push {
     position: relative;
-    /* bottom: 0.3rem; */
     /* font-family: 'Kalam', cursive; */
     font-size: 0.6em;
     color: var(--paragraph);
     padding: 0rem 0.6rem;
-    
 }
 
-.errores i{
+.errores i {
     margin: 0.3rem 0rem;
     background-color: rgb(27, 25, 37);
     border-radius: 0.4rem;
