--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,9 +1,6 @@
 @media (max-width: 800px) {
-
-  
-    /* DISPLAY NONE */
     .mn-dsktop {
-        display: none;        
+        display: none;
     }
 
     .btton {
@@ -14,25 +11,16 @@
         display: none;
     }
 
-    /* .copyright2 {
-        display: none;
-    } */
-
-
-    /* GENERAL */
     p {
         margin: 18px;
     }
 
-
-    /* HEADER */
     .hambur {
         position: relative;
         top: -7px;
         cursor: pointer;
     }
 
-    /* MAIN */
     .box-what {
         margin: 0px 20px;
     }
@@ -40,7 +28,7 @@
     .sub-title {
         margin: 0px;
     }
-    
+
     .box2 {
         background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(248, 224, 218, 1) 29%, rgba(248, 224, 218, 1) 100%);
         border-radius: 50px;
@@ -54,16 +42,17 @@
         right: auto;
         padding: 10px 25px;
     }
-    
+
     .box2 {
         display: flex;
         align-items: center;
         justify-content: center;
     }
+
     .bt2 {
         padding: 13px 18px;
     }
-    
+
     .box4 {
         display: flex;
         flex-direction: column;
@@ -72,13 +61,15 @@
         margin: 0rem;
         padding: 60px 20px 50px 20px;
     }
-    .circulos{
+
+    .circulos {
         display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: center;
         padding: 50px;
     }
+
     .circle {
         width: 10px;
         height: 10px;
@@ -89,6 +80,7 @@
         border-radius: 50px;
         border: #f3603b 1.5px solid;
     }
+
     .box3 {
         display: flex;
         flex-direction: column;
@@ -96,36 +88,34 @@
         justify-content: center;
         padding: 30px;
     }
+
     .sub-title3 {
         color: #FFFFFF;
         font-size: 30px;
     }
-    
-    /* FOOTER */
-    .cop{
+
+    .cop {
         display: flex;
         justify-content: center;
         align-items: center;
         position: relative;
-        
+
     }
+
     .copyright2 {
         color: #374354;
-        text-align: center;        
+        text-align: center;
         font-size: 1rem;
         padding: 3rem 0rem 0rem;
     }
-    
+
     .selector {
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
         padding: 20px;
-
     }
-
-    
 
     .bt4 {
         padding: 12px 23px;
@@ -134,9 +124,7 @@
 
     .listas {
         display: flex;
-        /* flex-direction: row; */
         justify-content: space-evenly;
-        
         padding: 25px;
     }
 
@@ -145,7 +133,6 @@
         padding: 30px;
         line-height: 2;
         font-size: 1.2rem;
-        
     }
 
     .redes {
@@ -164,63 +151,53 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: 2rem;        
+        padding: 2rem;
     }
-    .logo-f img{
+
+    .logo-f img {
         width: 70%;
     }
 
+    header {
+        background: rgb(255, 255, 255);
+        background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 68%, rgba(251, 250, 249, 1) 71%, rgba(201, 201, 199, 1) 78%, rgba(30, 30, 38, 1) 91%);
+    }
 
-
-    /* ULTIMA ACTUALIZACION */   
-
-
-    /* 
-    .logo-f img {
-        width: 60vw;
-    } */
-    
-    
-     
-      /* NUEVO ARREGLO MOBILE */
-      header{
-        background: rgb(255,255,255);
-background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 68%, rgba(251,250,249,1) 71%, rgba(201,201,199,1) 78%, rgba(30,30,38,1) 91%);
-      }
-        .marca{
+    .marca {
         padding: 1rem 0rem 4rem;
         display: flex;
         justify-content: center;
         align-items: center;
     }
-        .marca img{
-        width: 15rem;
-        /* padding: 0rem 0rem 2rem;
-        position: relative;
-        left: 2.5rem; */
-    }
-    .slide-contenedor{
-        box-shadow: 1px 2px 9px 9px rgba(0,0,0,0.68);
 
+    .marca img {
+        width: 15rem;
     }
+
+    .slide-contenedor {
+        box-shadow: 1px 2px 9px 9px rgba(0, 0, 0, 0.68);
+    }
+
     .miSlider img {
         width: 100%;
-        /* max-height: 100rem; */
         height: 75vmax;
         object-fit: cover;
         vertical-align: top;
         transition: 2s;
+    }
 
-      }
-    .graf img{
+    .graf img {
         display: none;
     }
-    .p-mobile{
+
+    .p-mobile {
         display: none;
     }
-    .title{
+
+    .title {
         font-size: 2.5rem;
     }
+
     section {
         display: flex;
         padding: 0px 20px;
@@ -230,16 +207,19 @@ background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 
         justify-content: center;
         justify-content: space-between;
     }
-    .box{
-        padding: 30px 0px 0px;
 
+    .box {
+        padding: 30px 0px 0px;
     }
-    .beta{
+
+    .beta {
         padding: 0px;
     }
-    .align-p{
+
+    .align-p {
         display: none;
     }
+
     .dowloadNotas {
         padding: .7rem 0rem;
         margin: 0rem 0rem 3rem;
@@ -248,87 +228,91 @@ background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 
         font-size: medium;
         font-weight: 600;
         position: relative;
-        
     }
-    /* .dowloadNotas:hover{
-        background-color: #f3603b;   
-        box-shadow: inset 3px 5px 9px -1px rgb(70, 16, 7);
-    } */
-    .parrafo-mob{
+
+    .parrafo-mob {
         display: none;
     }
-    .comentarios{
+
+    .comentarios {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         position: relative;
         bottom: 3rem;
-        
-        
     }
+
     .cards-info {
-        /* background-color: #f4f4f7; */
         padding: 1.6rem .3rem;
         width: 30%;
         border-radius: 1rem;
         box-shadow: 0px 4px 8px rgba(129, 126, 125, 0.1);
-
     }
-    .picture {     
-        background-color: #f3603b;   
+
+    .picture {
+        background-color: #f3603b;
         height: 100px;
         width: 100px;
         border-radius: 50px;
         box-shadow: 0px 4px 8px rgba(129, 126, 125, 0.5);
     }
-    .title2{
+
+    .title2 {
         font-size: x-large;
     }
-    .order-Grid{
+
+    .order-Grid {
         padding: 0rem 1rem 2rem;
     }
-    .grid-container h3 {        
+
+    .grid-container h3 {
         font-size: medium;
-      }
-      .grid-container h4 {        
+    }
+
+    .grid-container h4 {
         font-size: x-small;
-      }
-      .mobile-grid{
+    }
+
+    .mobile-grid {
         display: none;
-      }
-      .grid-container {
+    }
+
+    .grid-container {
         display: grid;
         grid-template-rows: 2rem;
-        grid-template-columns: 11rem 10rem ;
+        grid-template-columns: 11rem 10rem;
         grid-gap: 6px;
-      }   
-      
-    
-    #donde{
+    }
+
+    #donde {
         font-size: xx-large;
-        display: flex;        
-        justify-content: center;        
+        display: flex;
+        justify-content: center;
         padding: 5rem 0rem 0rem;
     }
-      .mapDirec iframe{
+
+    .mapDirec iframe {
         display: none;
     }
-    .mapDirec2{
+
+    .mapDirec2 {
         display: flex;
         align-items: center;
-
     }
-    .mapDirec2 iframe{
+
+    .mapDirec2 iframe {
         box-shadow: 0px 4px 8px rgba(38, 37, 37, 0.7);
-
     }
-    .grid-ubi{
+
+    .grid-ubi {
         padding: 1rem 1rem 2rem;
     }
-    .sub-title3{
+
+    .sub-title3 {
         font-size: 1.74rem;
     }
-    .phone800{
+
+    .phone800 {
         padding: 0rem .5rem;
         font-size: 1.5rem;
         font-weight: 900;
@@ -336,46 +320,49 @@ background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 
 
     footer {
         padding: 0px 0px 15px;
-        background: var(--footer);       
+        background: var(--footer);
     }
-.box4{
-    box-shadow: 1px 2px 13px 11px rgb(122, 115, 114);
-}
-.list-desk{
-    display: none;
-}
-.mensaje-foot{
-    padding: 2rem 0rem;
-    color: #FFFFFF;
-    font-size: 2rem;
-}
-.form-start {
-    /* padding: 1rem 0rem 0rem; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.form-name {
-    position: relative;
-    width: 20rem;
-    margin: .1rem 0rem;
-}
 
-.form-email {
-    position: relative;
-    width: 20rem;
-    margin: .3rem 0rem;
-}
+    .box4 {
+        box-shadow: 1px 2px 13px 11px rgb(122, 115, 114);
+    }
 
-.form-message {
-    position: relative;
-    width: 20rem;
-}
+    .list-desk {
+        display: none;
+    }
 
+    .mensaje-foot {
+        padding: 2rem 0rem;
+        color: #FFFFFF;
+        font-size: 2rem;
+    }
 
-.errores{
-    position: relative;
-    left: 1rem;
-}
+    .form-start {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .form-name {
+        position: relative;
+        width: 20rem;
+        margin: .1rem 0rem;
+    }
+
+    .form-email {
+        position: relative;
+        width: 20rem;
+        margin: .3rem 0rem;
+    }
+
+    .form-message {
+        position: relative;
+        width: 20rem;
+    }
+
+    .errores {
+        position: relative;
+        left: 1rem;
+    }
 }
